Implement DELETE /entry/:entryId/like
